--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,7 +3,7 @@
 
 /** Ionic CSS Variables **/
 :root {
-  /** hk-yellow **/
+  /** hk-green **/
   --ion-color-hk-green: #03D91F;
   --ion-color-hk-green-rgb: 3,217,31;
   --ion-color-hk-green-contrast: #000000;
