--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,61 +1,22 @@
 <ion-header>
   <ion-toolbar color="hk-red">
     <ion-title>
-      Absen {{ txtDayNow }}
+      {{ txtDayNow }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="ion-padding">
+<ion-content padding scroll-y=false>
+  <ion-text style="font-size: 14px">Status: </ion-text>
+  <ion-text class="workStatus">{{ txtWorkStatus }}</ion-text>
+  <p>Example just hit <a target="_blank" rel="noopener" href="https://www.hutamakarya.com/id/">hutama karya</a>
+    text.
+  </p>
 
-
-    <div class="row">
-      <div class="col text-center">
-        <!-- <div><canvas id="canvas" width="300" height="200"></canvas></div> -->
-        <h2>{{clock}}</h2>
-      </div>
-    </div>
-
-    <ion-text style="font-size: 14px">Status: </ion-text>
-    <ion-text class="workStatus">{{ txtWorkStatus }}</ion-text>
-    <p>Example just hit <a target="_blank" rel="noopener" href="https://www.hutamakarya.com/id/">hutama karya</a>
-      text.
-    </p>
-    <ion-button expand="block" shape="round" (click)="clickedButton()">Log</ion-button>
-    <ion-button expand="block" shape="round" (click)="clickedButton()">Log</ion-button>
-    <ion-button expand="block" shape="round" (click)="doAbsen()">Log</ion-button>
-    <ion-text style="font-size: 34px; text-align: center">{{ txtDayNow }}</ion-text>
-    <ion-datetime style="font-size: 34px; text-align: center" displayFormat="MMMM">{{ txtTimeNow }}</ion-datetime>
-
-    <ion-button expand="block" shape="round" (click)="presentAlertConfirm()">Log</ion-button>
-    <ion-button expand="block" shape="round" (click)="presentAlert()">Log</ion-button>
-    {{inputVal}}
-  </div>
-
-  <ion-card padding>
-    hei
-  </ion-card>
-
-  <!-- List of Text Items -->
-  <ion-list>
-    <ion-item>
-      <ion-label>Pokémon Yellow</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Mega Man X</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>The Legend of Zelda</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Pac-Man</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Super Mario World</ion-label>
-    </ion-item>
-  </ion-list>
-
+  <ion-row class="nowrap ion-justify-content-center ion-align-items-center">
+    <ion-text style="font-size: 34px; text-align: center">{{ txtTimeNow }}</ion-text>
+  </ion-row>
+  
 </ion-content>
 
 <ion-footer>
