--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,9 +9,9 @@
 <ion-content padding scroll-y=false>
   <ion-text style="font-size: 14px">Status: </ion-text>
   <ion-text class="workStatus">{{ txtWorkStatus }}</ion-text>
-  <p>Example just hit <a target="_blank" rel="noopener" href="https://www.hutamakarya.com/id/">hutama karya</a>
+  <!--<p>Example just hit <a target="_blank" rel="noopener" href="https://www.hutamakarya.com/id/">hutama karya</a>
     text.
-  </p>
+  </p>-->
 
   <ion-row class="nowrap ion-justify-content-center ion-align-items-center">
     <ion-text style="font-size: 34px; text-align: center">{{ txtTimeNow }}</ion-text>
@@ -23,7 +23,7 @@
   <ion-grid>
     <ion-row>
       <ion-col class="ion-float-left" size="8" style="background: transparent">
-        <ion-text>Datang : {{txtTimeArrived}}</ion-text>
+        <ion-text>Datang : {{waktu}} {{geoLatitude}} {{geoLongitude}}</ion-text>
         <br>
         <ion-text>Pulang : {{txtTimeBack}}</ion-text>
       </ion-col>
