--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -1,9 +1,9 @@
-<ion-header>
-  <ion-toolbar>
+<ion-header translucent>
+  <ion-toolbar color="hk-red">
     <ion-title>notifications</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-button expand="block" shape="round" color="hk-red" (click)="presentPopover()">ABSEN</ion-button>
 </ion-content>
