- Modify popover - Masukin kelas data date

--- a/src/app/components/popover/popover.component.html
+++ b/src/app/components/popover/popover.component.html
@@ -1,16 +1,46 @@
-<ion-chip padding class="content">
-  <!-- aaa <br>
-  aaa <br>
-  aaa <br>
-  aaa <br>
-  aaa <br>
-  aaa <br>
-  aaa <br>
-  aaa <br>
-  aaa <br>
-  aaa <br>
-  aaa <br>
-  aaa -->
-</ion-chip>
+<ion-content>
+  <img src="../../../assets/images/bg-3.png" alt="bg-3">
+</ion-content>
 
-<ion-button shape="round" expand="block">Bismillah</ion-button>
+<ion-grid no-padding>
+  <ion-row no-padding>
+    <ion-col no-padding>
+      <div class="ion-text-start">
+        <ion-button shape="round" expand="block" color="hk-grey" (click)="closePopover()">Cancel</ion-button>
+      </div>
+    </ion-col>
+    <ion-col no-padding>
+      <div class="ion-text-end">
+        <ion-button shape="round" expand="block" color="hk-grey" (click)="closePopover()">OK</ion-button>
+      </div>
+    </ion-col>
+
+  </ion-row>
+</ion-grid>
+<!-- 
+<ion-chip padding class="content">
+
+  aaa <br>
+  aaa <br>
+  aaa <br>
+  aaa <br>
+  aaa <br>
+  aaa <br>
+  aaa <br>
+  aaa <br>
+  aaa <br>
+  aaa <br>
+  aaa <br>
+  aaa
+</ion-chip> -->
+
+<!-- <ion-content padding scroll-y=false>
+  <ion-text style="font-size: 14px">Status: </ion-text>
+
+  <ion-row class="nowrap ion-justify-content-center ion-align-items-center">
+    <ion-text style="font-size: 34px; text-align: center">{{ txtTimeNow }}</ion-text>
+  </ion-row>
+  
+</ion-content> -->
+
+<!-- <ion-button shape="round" expand="block" color="hk-grey" (click)="closePopover()">OK</ion-button> -->
