--- a/src/app/components/popover/popover.component.scss
+++ b/src/app/components/popover/popover.component.scss
@@ -1,10 +1,21 @@
-.content {
+// .content {
 //   font-size: 10px;
 //   height: 500%;
 //   width: 100%;
-    background: var(--ion-color-hk-red);
+// //   background: var(--ion-color-hk-red);
 //   background: url("../../../assets/images/bg-3.png");
 //   background-size: contain;
 //   background-repeat: no-repeat;
 //   background-position: center;
-}
+// }
+
+// .ion-justify-content-center {
+//   // background: #a85858;
+//   background-image: url("../../../assets/images/bg-3.png");
+//   background-size: contain;
+//   background-repeat: no-repeat;
+//   background-position: center;
+
+//   // grid-auto-rows: 330%;
+//   height: 80%;
+// }
