--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -23,7 +23,7 @@
   <ion-grid>
     <ion-row>
       <ion-col class="ion-float-left" size="8" style="background: transparent">
-        <ion-text>Datang : {{waktu}} {{geoLatitude}} {{geoLongitude}}</ion-text>
+        <ion-text>Datang : {{txtTimeArrived}} {{geoLatitude}} {{geoLongitude}}</ion-text>
         <br>
         <ion-text>Pulang : {{txtTimeBack}}</ion-text>
       </ion-col>
