--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,6 +1,30 @@
 <ion-content padding>
   <h1>Sign In</h1>
-  <ion-item>
+
+  <form registerForm="ngForm" (ngSubmit)="navigateToHomePage()">
+    <ion-row>
+      <ion-col>
+        <ion-list inset>
+          
+          <ion-item>
+            <ion-input type="text" placeholder="Username" [(ngModel)]="Username" name="Username"  required></ion-input>
+          </ion-item>
+          
+          <ion-item>
+            <ion-input type="password" placeholder="Password" [(ngModel)]="Password" name="Password" required></ion-input>
+          </ion-item>
+          
+        </ion-list>
+      </ion-col>
+    </ion-row>
+    
+    <ion-row>
+      <ion-col class="signup-col">
+        <ion-button shape="round" expand="block" color='hk-red' (click)="navigateToHomePage()" type="submit">Login</ion-button>
+      </ion-col>
+    </ion-row>
+  </form> 
+  <!-- <ion-item>
     <ion-label position="floating">Username</ion-label>
     <ion-input></ion-input>
   </ion-item>
@@ -10,5 +34,5 @@
     <ion-input></ion-input>
   </ion-item>
 
-  <ion-button shape="round" expand="block" color='hk-red' (click)="navigateToHomePage()">Login</ion-button>
+  <ion-button shape="round" expand="block" color='hk-red' (click)="navigateToHomePage()">Login</ion-button> -->
 </ion-content>
