--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -7,7 +7,7 @@
 
   <ion-item>
     <ion-label position="stacked">Password</ion-label>
-    <ion-input></ion-input>
+    <ion-input placeholder="Password"></ion-input>
   </ion-item>
 
   <ion-button shape="round" expand="block" color='hk-red' (click)="navigateToHomePage()">Login</ion-button>
