--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -1,10 +1,12 @@
 <ion-header>
   <ion-toolbar color="hk-red">
+    <ion-buttons slot="start">
+      <ion-back-button color="hk-white-red"></ion-back-button>
+    </ion-buttons>
     <ion-title>notifications</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  
-  <ion-button expand="block" shape="round" color="hk-red" (click)="presentPopover()">ABSEN</ion-button>
+
 </ion-content>
