Menambahkan routing ketika sudah login dan logout dengan auth service dan guard

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,6 +8,9 @@
       <ion-button color="hk-white-red" (click)="navigateToReportPage()">
         <ion-icon slot="icon-only" name="clipboard"></ion-icon>
       </ion-button>
+      <ion-button color="hk-white-red" (click)="logout()">
+        <ion-icon slot="icon-only" name="power"></ion-icon>
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
