--- a/src/app/pages/reports/reports.page.html
+++ b/src/app/pages/reports/reports.page.html
@@ -17,47 +17,118 @@
     </ion-segment>
   </ion-row>
 
-  <calendar 
-  [eventSource]="eventSource" 
-  [calendarMode]="calendar.mode" 
-  [currentDate]="calendar.currentDate"
-  (onEventSelected)="onEventSelected($event)" 
-  (onTitleChanged)="onViewTitleChanged($event)"
-  (onTimeSelected)="onTimeSelected($event)" startHour="6" endHour="20" step="30" startingDayWeek="0">
-  </calendar>
+  <!-- BATAS ATAS -->
+  <ion-button type="submit" float-left ion-button fill="clear" color="dark" class="btnPrev" (click)="prev()">
+    <ion-icon name="arrow-back"></ion-icon>
+  </ion-button>
+  <ion-button type="submit" float-right ion-button fill="clear" color="dark" class="btnNext" (click)="next()">
+    <ion-icon name="arrow-forward"></ion-icon>
+  </ion-button>
 
-  <ion-row [ngSwitch]="segment" style="background: brown">
-    <ion-item style="background-color: brown" Lines="none" *ngSwitchCase="'0'">
-      <ion-segment scrollable mode="md" no-border *ngSwitchCase="'0'">
-        <ion-segment-button>
-          <ion-label>1</ion-label>
-        </ion-segment-button>
-        <ion-segment-button checked>
-          <ion-label>2</ion-label>
-        </ion-segment-button>
-        <ion-segment-button>
-          <ion-label>3</ion-label>
-        </ion-segment-button>
-        <ion-segment-button>
-          <ion-label>4</ion-label>
-        </ion-segment-button>
-        <ion-segment-button>
-          <ion-label>5</ion-label>
-        </ion-segment-button>
-        <ion-segment-button>
-          <ion-label>6</ion-label>
-        </ion-segment-button>
-        <ion-segment-button>
-          <ion-label>7</ion-label>
-        </ion-segment-button>
-      </ion-segment>
-    </ion-item>
-  </ion-row>
+  <ion-slides #slidesMonth (ionSlideDidChange)="slideChanged()" [options]="slideOpts" style="min-height: 30px">
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Januari {{ tahun }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Februari {{ tahun }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Maret {{ tahun }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">April {{ tahun }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Mei {{ tahun }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Juni {{ tahun }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Juli {{ tahun }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Agustus {{ tahun }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">September {{ tahun }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Oktober {{ tahun }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">November {{ tahun }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Desember {{ tahun }}</ion-text>
+    </ion-slide>
+  </ion-slides>
+
+  <div class="container">
+    <div class="scroll" scrollX="true">
+      <ion-button shape="round" size="small" mode="md" fill="solid" color="success">20</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">20</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">20</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">20</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">20</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">20</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+    </div>
+  </div>
+  <!-- BATAS BAWAH -->
+
 </ion-header>
 
 <ion-content style="height: 100%">
-  <ion-slides #slides (ionSlideDidChange)="slideChanged()" style="background: blueviolet; min-height: 100%">
-    <ion-slide>
+  <div [ngSwitch]="segment">
+    <div *ngSwitchCase="'0'">
+      <!-- BATAS ATAS -->
+      <!-- BATAS BAWAH -->
+      <hr width="90%">
+
+      <ion-grid style="width: 90%" no-padding>
+        <ion-row no-padding align-items-center>
+          <ion-col size="2" no-padding>
+            <ion-icon name="card" style="font-size: 50px; vertical-align: middle" color="hk-red"></ion-icon>
+          </ion-col>
+          <ion-col size="10">
+            <ion-text color="hk-darkgrey">Datang : </ion-text>
+            <ion-text color="dark">07:31 AM {{ txtTimeArrived }}</ion-text>
+            <br>
+            <ion-text color="hk-darkgrey">Pulang : </ion-text>
+            <ion-text color="dark">17:31 PM</ion-text>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+      <hr width="90%">
+    </div>
+  </div>
+
+  <ion-slides #slides (ionSlideDidChange)="slideChanged()" style="min-height: 100%">
+    <ion-slide style="display: block">
       <h1>Tab 1</h1>
       <br>
       <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
