--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -7,89 +7,25 @@
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content>
-  <ion-button type="submit" float-left ion-button fill="clear" color="dark" class="btnPrev" (click)="prev()">
-    <ion-icon name="arrow-back"></ion-icon>
-  </ion-button>
-  <ion-button type="submit" float-right ion-button fill="clear" color="dark" class="btnNext" (click)="next()">
-    <ion-icon name="arrow-forward"></ion-icon>
-  </ion-button>
 
-  <ion-slides #slides (ionSlideDidChange)="slideChanged()" style="min-height: 30px">
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Januari {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Februari {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Maret {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">April {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Mei {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Juni {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Juli {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Agustus {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">September {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Oktober {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">November {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Desember {{ tahun }}</ion-text>
-    </ion-slide>
-  </ion-slides>
+  <ion-row class="nowrap ion-justify-content-center ion-align-items-center">
+    <ion-segment (ionChange)="segmentChanged()" [(ngModel)]="segment" color="hk-purple" mode="ios" shape="round">
+      <ion-segment-button value="0">
+        <ion-label>Harian</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="1">
+        <ion-label>Bulanan</ion-label>
+      </ion-segment-button>
+    </ion-segment>
+  </ion-row>
 
-  <div class="container">
-    <div class="scroll" scrollX="true">
-      <ion-button shape="round" size="small" mode="md" fill="solid" color="success">20</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">20</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">20</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">20</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">20</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">20</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+  <div [ngSwitch]="segment">
+    <div *ngSwitchCase="'0'">
+      <app-report-daily></app-report-daily>
     </div>
   </div>
 
   <hr width="90%">
-
-
-
 </ion-content>
