--- a/src/app/pages/reports/reports.page.html
+++ b/src/app/pages/reports/reports.page.html
@@ -25,7 +25,7 @@
     <ion-icon name="arrow-forward"></ion-icon>
   </ion-button>
 
-  <ion-slides #slidesMonth (ionSlideDidChange)="slideChanged()" [options]="slideOpts" style="min-height: 30px">
+  <ion-slides #slidesMonth (ionSlideDidChange)="slideMonthChanged()" [options]="slideOpts" style="min-height: 30px">
     <ion-slide>
       <ion-text style="padding-top: 12px">Januari {{ tahun }}</ion-text>
     </ion-slide>
@@ -66,39 +66,15 @@
 
   <div class="container">
     <div class="scroll" scrollX="true">
-      <ion-button shape="round" size="small" mode="md" fill="solid" color="success">20</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">20</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">20</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">20</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">20</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">20</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
-      <ion-button shape="round" size="small" mode="md" fill="clear" color="dark">2</ion-button>
+      <span *ngFor="let buttonPropertyData of buttonPropertyDatas">
+        <ion-button shape="round" size="small" fill="{{ buttonPropertyData.fill }}"
+          color="{{ buttonPropertyData.color }}" (click)="GetDayData(buttonPropertyData.date)">
+          {{ buttonPropertyData.date }}
+        </ion-button>
+      </span>
     </div>
   </div>
   <!-- BATAS BAWAH -->
-
 </ion-header>
 
 <ion-content style="height: 100%">
