--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -2,35 +2,49 @@
   <ion-slides fullscreen pager="true" [options]="slideOpts">
 
     <ion-slide>
-      <div class="bottom" padding>
-        <h2>Hutama Karya Absen Management System</h2>
-        <p>Mobile absensi</p>
-      </div>
+      <ion-row>
+        <div class="text" padding>
+          <h2>Hutama Karya Absen Management System</h2>
+          <p>Mobile absensi</p>
+        </div>
+      </ion-row>
     </ion-slide>
 
     <ion-slide>
-      <div class="bottom" padding>
-        <h2>Integrated</h2>
-        <p>Sistem absen ini terhubung dengan perangkat absensi di masing-masing divisi</p>
-      </div>
+      <ion-row>
+        <div class="text" padding>
+          <h2>Integrated</h2>
+          <p>Sistem absen ini terhubung dengan perangkat absensi di masing-masing divisi</p>
+        </div>
+    </ion-row>
     </ion-slide>
 
     <ion-slide>
-      <div class="bottom" padding>
-        <h2>Powerful</h2>
-        <p>Memiliki fitur untuk dapat absen diluar kantor, izin terlambat, pulang cepat, serta pencatatan lembur</p>
-      </div>
+      <ion-row>
+        <div class="text" padding>
+          <h2>Powerful</h2>
+          <p>Memiliki fitur untuk dapat absen diluar kantor, izin terlambat, pulang cepat, serta pencatatan lembur</p>
+        </div>
+    </ion-row>
     </ion-slide>
 
     <ion-slide>
-      <div class="bottom" padding>
-        <h2>Get Started</h2>
-        <p>Biar digaji</p>
-        <ion-row class="ion-justify-content-center">
-          <ion-button expand='full' shape='round' (click)='navigateToLoginPage()'>Continue <ion-icon name="arrow-forward"></ion-icon>
+      <ion-row>
+        <div class="text" padding>
+          <h2>Get Started</h2>
+          <p>Biar digaji</p>
+          
+          <ion-row class="ion-justify-content-center">
+              <ion-button  class="button" expand='full' color='hk-purple' shape='round' (click)='navigateToLoginPage()'>Continue <ion-icon name="arrow-forward"></ion-icon>
+              </ion-button>
+          </ion-row>
+        </div>
+      </ion-row>
+
+      <!-- <ion-row class="ion-justify-content-center">
+          <ion-button  class="button" expand='full' shape='round' (click)='navigateToLoginPage()'>Continue <ion-icon name="arrow-forward"></ion-icon>
           </ion-button>
-        </ion-row>
-      </div>
+      </ion-row> -->
     </ion-slide>
   </ion-slides>
 </ion-content>
