--- a/src/app/pages/welcome/welcome.page.scss
+++ b/src/app/pages/welcome/welcome.page.scss
@@ -7,27 +7,34 @@ ion-slides {
 }
 
 ion-slide {
-  padding: 140px 20px;
   display: block;
+  ion-row {
+    .text {
+      padding-top: 95%;
+      position: absolute;
+      left: 0;
+      right: 0;
+    }
+  }
   h2 {
     font-size: 32px;
     font-weight: bold;
   }
 
-  .bottom {
-    position: absolute;
-    bottom: 80px;
-    left: 0px;
-    right: 0px;
-  }
+  // .button {
+  //     position: fixed;
+  //     top: 90%;
+  // }
+
+  // .bottom {
+  //   position: absolute;
+  //   bottom: 80px;
+  //   left: 0px;
+  //   right: 0px;
+  // }
 
   background-image: url("../../../assets/images/bg-2.png");
   background-position: top;
-  background-size: contain;
+  background-size: 100%;
   background-repeat: no-repeat;
-}
-
-ion-button {
-  position: fixed;
-  bottom: 30px;
 }
