- Menambahkan reportDaily2 Component - Menambahkan reportMonthly Component - Merapikan code report page dan memasukkan kedalam masing-masing component - Mencoba menambahkan parameter saat masuk kedalam report page - Mencoba menambahkan parameter saat memanggil popover component - Menanambahkan setting text transform from "Uppercase" to "none" pada global variables.scss

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,7 +5,7 @@
       <ion-button color="hk-white-red" (click)="navigateToNotificationsPage()">
         <ion-icon slot="icon-only" name="notifications"></ion-icon>
       </ion-button>
-      <ion-button color="hk-white-red" (click)="navigateToReportPage()">
+      <ion-button color="hk-white-red" (click)="navigateToReportPage(1)">
         <ion-icon slot="icon-only" name="clipboard"></ion-icon>
       </ion-button>
       <ion-button color="hk-white-red" (click)="logout()">
@@ -37,7 +37,7 @@
         <ion-text>Pulang : {{txtTimeBack}}</ion-text>
       </ion-col>
       <ion-col class="ion-float-right" size="4" style="background: transparent">
-        <ion-text (click)="navigateToReportPage()">Detail </ion-text>
+        <ion-text (click)="navigateToReportPage(0)">Detail </ion-text>
         <ion-icon name="arrow-forward" mode="ios" style="font-size: 14px; vertical-align: middle"></ion-icon>
       </ion-col>
     </ion-row>
