--- a/src/app/components/popover/popover.component.html
+++ b/src/app/components/popover/popover.component.html
@@ -1,5 +1,6 @@
 <ion-content>
   <img src="../../../assets/images/bg-3.png" alt="bg-3">
+  <ion-text>{{ popoverParam }}</ion-text>
 </ion-content>
 
 <ion-grid no-padding>
@@ -14,7 +15,6 @@
         <ion-button shape="round" expand="block" color="hk-grey" (click)="closePopover()">OK</ion-button>
       </div>
     </ion-col>
-
   </ion-row>
 </ion-grid>
 <!-- 
