--- a/src/app/components/report-daily/report-daily.component.scss
+++ b/src/app/components/report-daily/report-daily.component.scss
@@ -1,18 +1,3 @@
-ion-segment {
-  --background-color: #000000;
-  width: 80%;
-  height: 25px;
-  text-align: center;
-}
-
-ion-segment-button {
-  min-height: 25px;
-}
-
-.ion-justify-content-center {
-  padding: 5px;
-}
-
 .container {
   // display: inline;
   // width: 80%;
@@ -27,4 +12,19 @@ ion-segment-button {
   .scroll {
     overflow: auto;
   }
+}
+
+hr {
+  height: 0.75px;
+  background-color: #cecece;
+}
+
+ion-card {
+  --background: #f0f0f0;
+  box-shadow: none;
+  border-radius: 20px;
+}
+
+.ios ion-card {
+  margin-bottom: -8px;
 }
