--- a/src/app/pages/reports/reports.page.html
+++ b/src/app/pages/reports/reports.page.html
@@ -5,8 +5,10 @@
     </ion-buttons>
     <ion-title>reports</ion-title>
   </ion-toolbar>
+</ion-header>
 
-  <ion-row class="nowrap ion-justify-content-center ion-align-items-center">
+<ion-content style="height: 100%">
+  <ion-row justify-content-center style="padding: 5px">
     <ion-segment (ionChange)="segmentChanged()" [(ngModel)]="segment" color="hk-purple" mode="ios" shape="round">
       <ion-segment-button value="0">
         <ion-label>Harian</ion-label>
@@ -17,132 +19,19 @@
     </ion-segment>
   </ion-row>
 
-  <!-- BATAS ATAS -->
-  <ion-button type="submit" float-left ion-button fill="clear" color="dark" class="btnPrev" (click)="prev()">
-    <ion-icon name="arrow-back"></ion-icon>
-  </ion-button>
-  <ion-button type="submit" float-right ion-button fill="clear" color="dark" class="btnNext" (click)="next()">
-    <ion-icon name="arrow-forward"></ion-icon>
-  </ion-button>
-
-  <ion-slides #slidesMonth (ionSlideDidChange)="slideMonthChanged()" [options]="slideOpts" style="min-height: 30px">
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Januari {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Februari {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Maret {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">April {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Mei {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Juni {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Juli {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Agustus {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">September {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Oktober {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">November {{ tahun }}</ion-text>
-    </ion-slide>
-    <ion-slide>
-      <ion-text style="padding-top: 12px">Desember {{ tahun }}</ion-text>
-    </ion-slide>
-  </ion-slides>
-
-  <div class="container">
-    <div class="scroll" scrollX="true">
-      <span *ngFor="let buttonPropertyData of buttonPropertyDatas">
-        <ion-button shape="round" size="small" fill="{{ buttonPropertyData.fill }}"
-          color="{{ buttonPropertyData.color }}" (click)="GetDayData(buttonPropertyData.date)">
-          {{ buttonPropertyData.date }}
-        </ion-button>
-      </span>
-    </div>
-  </div>
-  <!-- BATAS BAWAH -->
-</ion-header>
-
-<ion-content style="height: 100%">
   <div [ngSwitch]="segment">
     <div *ngSwitchCase="'0'">
-      <!-- BATAS ATAS -->
-      <!-- BATAS BAWAH -->
-      <hr width="90%">
-
-      <ion-grid style="width: 90%" no-padding>
-        <ion-row no-padding align-items-center>
-          <ion-col size="2" no-padding>
-            <ion-icon name="card" style="font-size: 50px; vertical-align: middle" color="hk-red"></ion-icon>
-          </ion-col>
-          <ion-col size="10">
-            <ion-text color="hk-darkgrey">Datang : </ion-text>
-            <ion-text color="dark">07:31 AM {{ txtTimeArrived }}</ion-text>
-            <br>
-            <ion-text color="hk-darkgrey">Pulang : </ion-text>
-            <ion-text color="dark">17:31 PM</ion-text>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-
-      <hr width="90%">
+      <app-report-daily></app-report-daily>
     </div>
   </div>
 
   <ion-slides #slides (ionSlideDidChange)="slideChanged()" style="min-height: 100%">
-    <ion-slide style="display: block">
-      <h1>Tab 1</h1>
-      <br>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
-      <ion-button expand="block" shape="round" color="hk-red" mode="ios" (click)="presentPopover()">ABSEN</ion-button>
+    <ion-slide align-self-start justify-content-start align-items-start style="display: block">
+      <app-report-daily2></app-report-daily2>
     </ion-slide>
 
-    <ion-slide>
-      <h1>Tab 2</h1>
+    <ion-slide style="display: block">
+      <app-report-monthly></app-report-monthly>
     </ion-slide>
   </ion-slides>
 </ion-content>
