--- a/src/app/pages/form-request/form-request.page.html
+++ b/src/app/pages/form-request/form-request.page.html
@@ -5,5 +5,14 @@
 </ion-header>
 
 <ion-content>
-  <app-form-lembur></app-form-lembur>
+  <div *ngIf="AC005">
+    <app-form-lembur></app-form-lembur>
+  </div>
+  <div *ngIf="AC002">
+    <app-form-terlambat></app-form-terlambat>
+  </div>
+  <div *ngIf="AC004">
+      <app-form-pulang-cepat></app-form-pulang-cepat>
+    </div>
+
 </ion-content>
