--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,7 +8,7 @@
       <ion-button color="hk-white-red" (click)="navigateToReportPage(1)">
         <ion-icon slot="icon-only" name="clipboard"></ion-icon>
       </ion-button>
-      <ion-button color="hk-white-red" (click)="logout()">
+      <ion-button color="hk-white-red" (click)="Logout()">
         <ion-icon slot="icon-only" name="power"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -17,7 +17,7 @@
 
 <ion-content padding scroll-y=false>
   <ion-text style="font-size: 14px">Status: </ion-text>
-  <ion-text style="font-size: 14px ;" color = "{{warnaStatus}}" >{{ txtWorkStatus }}</ion-text>
+  <ion-text style="font-size: 14px ;" color = "{{colorStatus}}" >{{ txtWorkStatus }}</ion-text>
   <!--<p>Example just hit <a target="_blank" rel="noopener" href="https://www.hutamakarya.com/id/">hutama karya</a>
     text.
   </p>-->
@@ -55,5 +55,5 @@
     <ion-label color="light">Absen Diluar Kantor</ion-label>
   </ion-chip>
 
-  <ion-button expand="block" shape="round" color="hk-red" (click)="buttonAbsen()">ABSEN</ion-button>
+  <ion-button expand="block" shape="round" color="hk-red" (click)="ButtonAbsen()">ABSEN</ion-button>
 </ion-footer>
