- Fixing route untuk form request (add pada main page, delete pada app-routing.module) - Bug fix paramNav ketika panggil form request - Modify editable form request

--- a/src/app/components/form-lembur/form-lembur.component.html
+++ b/src/app/components/form-lembur/form-lembur.component.html
@@ -1,3 +1,10 @@
-<p>
-  form-lembur works!
-</p>
+<ion-card>
+  <ion-card-header>
+    <ion-card-subtitle>Form Lembur</ion-card-subtitle>
+    <ion-card-title>Lembur</ion-card-title>
+  </ion-card-header>
+
+  <ion-card-content>
+    Lembur
+  </ion-card-content>
+</ion-card>
