--- a/src/app/components/form-pulang-cepat/form-pulang-cepat.component.html
+++ b/src/app/components/form-pulang-cepat/form-pulang-cepat.component.html
@@ -1,3 +1,10 @@
-<p>
-  form-pulang-cepat works!
-</p>
+<ion-card>
+  <ion-card-header>
+    <ion-card-subtitle>Form Pulang Cepat</ion-card-subtitle>
+    <ion-card-title>Pulang Cepat</ion-card-title>
+  </ion-card-header>
+
+  <ion-card-content>
+    Pulang Cepat
+  </ion-card-content>
+</ion-card>
