--- a/src/app/components/form-terlambat/form-terlambat.component.html
+++ b/src/app/components/form-terlambat/form-terlambat.component.html
@@ -1,3 +1,10 @@
-<p>
-  form-terlambat works!
-</p>
+<ion-card>
+  <ion-card-header>
+    <ion-card-subtitle>Form Terlambat</ion-card-subtitle>
+    <ion-card-title>terlambat</ion-card-title>
+  </ion-card-header>
+
+  <ion-card-content>
+    Terlambat
+  </ion-card-content>
+</ion-card>
