--- a/src/app/pages/welcome/welcome.page.scss
+++ b/src/app/pages/welcome/welcome.page.scss
@@ -14,11 +14,43 @@ ion-slide {
       position: absolute;
       left: 0;
       right: 0;
+
+      @media screen and (min-width:568px) {
+        padding-top: 22%;
+      }
+
+      @media screen and (min-width:640px) {
+        padding-top: 25%;
+      }
+
+      @media screen and (min-width:768px) {
+        padding-top: 735px;
+      }
+
+      @media screen and (min-width:812px) {
+        padding-top: 24%;
+      }
+
+      @media screen and (min-width:928px) {
+        padding-top: 96%;
+      }
+
+      @media screen and (min-width:1024px) {
+        padding-top: 55%;
+      }
+
+      @media screen and (min-width:1381px) {
+        padding-top: 14%;
+      }
     }
   }
   h2 {
     font-size: 32px;
     font-weight: bold;
+
+    @media screen and (min-width:1024px) {
+      font-size: 32px;
+    }
   }
 
   // .button {
@@ -37,4 +69,33 @@ ion-slide {
   background-position: top;
   background-size: 100%;
   background-repeat: no-repeat;
+
+  @media screen and (min-width:568px) {
+    height: 45%;
+  }
+
+  @media screen and (min-width:640px) {
+    height: 50%;
+  }
+
+  @media screen and (min-width:768px) {
+    height: 100%;
+  }
+
+  @media screen and (min-width:812px) {
+    height: 53%;
+  }
+
+  @media screen and (min-width:928px) {
+    height: 96%;
+  }
+
+  @media screen and (min-width:1024px) {
+    height: 35%;
+  }
+
+  @media screen and (min-width:1366px) {
+    background-size: 100%;
+    height: 50%;
+  }
 }
