--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -27,6 +27,14 @@
   --ion-color-hk-white-red-shade: #fce7e7;
   --ion-color-hk-white-red-tint: #ffffff;
 
+  /** hk-white-purple **/
+   --ion-color-hk-white-purple: #ffffff;
+  --ion-color-hk-white-purple-rgb: 255, 255, 255;
+  --ion-color-hk-white-purple-contrast: #652e7d;
+  --ion-color-hk-white-purple-contrast-rgb: 101, 46, 125;
+  --ion-color-hk-white-purple-shade: #faeeff;
+  --ion-color-hk-white-purple-tint: #ffffff;
+
   /** hk-purple **/
   --ion-color-hk-purple: #652e7d;
   --ion-color-hk-purple-rgb: 101, 46, 125;
@@ -323,6 +331,15 @@ ion-alert {
   --ion-color-contrast-rgb: var(--ion-color-hk-purple-contrast-rgb);
   --ion-color-shade: var(--ion-color-hk-purple-shade);
   --ion-color-tint: var(--ion-color-hk-purple-tint);
+}
+
+.ion-color-hk-white-purple {
+  --ion-color-base: var(--ion-color-hk-white-purple);
+  --ion-color-base-rgb: var(--ion-color-hk-white-purple-rgb);
+  --ion-color-contrast: var(--ion-color-hk-white-purple-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-hk-white-purple-contrast-rgb);
+  --ion-color-shade: var(--ion-color-hk-white-purple-shade);
+  --ion-color-tint: var(--ion-color-hk-white-purple-tint);
 }
 
 .ion-color-hk-white-red {
