--- a/src/app/pages/notifications/notifications.page.scss
+++ b/src/app/pages/notifications/notifications.page.scss
@@ -1,20 +1,17 @@
-.container {
-  // display: inline;
-  // width: 80%;
-  padding-left: 5%;
-  padding-right: 5%;
-  // background-color: green;
-  overflow: hidden;
-  white-space: nowrap;
-  ::-webkit-scrollbar {
-    display: none;
-  }
-  .scroll {
-    overflow: auto;
-  }
+ion-content {
+  --background: none;
+  background-image: url("../../../assets/images/bg-4.png");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
-hr {
-  height: 0.75px;
-  background-color: #cecece;
+ion-card {
+  --background: #f0f0f0;
+  box-shadow: none;
+  border-radius: 20px;
+}
+
+.ios ion-card {
+  margin-bottom: 15px;
 }
